<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#e8e8e8">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:layout_marginTop="2dp"
    android:background="#ffffff"
    android:id="@+id/person_mypublish_intent"
    android:clickable="true"
        >
    <ImageView
        android:layout_width="25dp"
        android:layout_height="28dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:src="@mipmap/img_my_fragment_release_left"/>
    <TextView
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:text="@string/string_release"
        android:layout_marginLeft="5dp"
        android:paddingLeft="18dp"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:textColor="#000000"
        android:layout_weight="1"/>
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:src="@mipmap/img_my_fragment_title_right"
        android:layout_weight="1"
        />

</LinearLayout>

    <LinearLayout
    android:id="@+id/person_mypublish_intent1"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:gravity="center_vertical"
    android:layout_marginTop="2dp"
    android:background="#ffffff"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="25dp"
        android:layout_height="28dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:src="@mipmap/img_my_fragment_draft_left"/>
    <TextView
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:text="@string/string_thedraft"
        android:layout_marginLeft="5dp"
        android:paddingLeft="18dp"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:textColor="#000000"
        android:layout_weight="1"/>
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:src="@mipmap/img_my_fragment_title_right"
        android:layout_weight="1"
        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/person_mypublish_intent2"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:background="#ffffff">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="28dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:src="@mipmap/img_my_fragment_collection_left"/>
        <TextView
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:text="@string/string_collection"
            android:layout_marginLeft="5dp"
            android:paddingLeft="18dp"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/img_my_fragment_title_right"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/person_mypublish_intent3"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:background="#ffffff">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="28dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:src="@mipmap/img_my_fragment_msg_left"/>
        <TextView
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:text="@string/string_message"
            android:layout_marginLeft="5dp"
            android:paddingLeft="18dp"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/img_my_fragment_title_right"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/person_mypublish_intent4"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:background="#ffffff">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="28dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:src="@mipmap/img_my_fragment_stament_left"/>
        <TextView
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:text="@string/string_statement"
            android:layout_marginLeft="5dp"
            android:paddingLeft="18dp"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/img_my_fragment_title_right"
            android:layout_weight="1"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/person_mypublish_intent5"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:background="#ffffff">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="28dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:src="@mipmap/img_my_fragment_about_left"/>
        <TextView
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:text="@string/string_about"
            android:layout_marginLeft="5dp"
            android:paddingLeft="18dp"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/img_my_fragment_title_right"
            android:layout_weight="1"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/person_mypublish_intent6"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:background="#ffffff">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="28dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:src="@mipmap/img_my_fragment_share_left"/>
        <TextView
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:text="@string/string_share"
            android:layout_marginLeft="5dp"
            android:paddingLeft="18dp"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:textColor="#000000"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/img_my_fragment_title_right"
            android:layout_weight="1"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/person_mypublish_intent7"
        android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:background="#ffffff">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="28dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:src="@mipmap/img_login_password"/>
            <TextView
                android:layout_width="240dp"
                android:layout_height="match_parent"
                android:text="@string/string_changepassword"
                android:layout_marginLeft="5dp"
                android:paddingLeft="18dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@mipmap/img_my_fragment_title_right"
                android:layout_weight="1"
                />
        </LinearLayout>
            <LinearLayout
                android:id="@+id/person_mypublish_intent8"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                android:background="#ffffff">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:src="@mipmap/img_my_fragment_buffer_left"/>
                <TextView
                    android:layout_width="240dp"
                    android:layout_height="match_parent"
                    android:text="@string/string_clearcache"
                    android:layout_marginLeft="5dp"
                    android:paddingLeft="18dp"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:textColor="#000000"
                    android:layout_weight="1"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/img_my_fragment_title_right"
                    android:layout_weight="1"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/My_homepage_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center"
                android:background="@mipmap/btn_small_green"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:text="退出登录"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
